--- a/src/app/modules/frontoffice/rulesnpolicyreport/rulesnpolicyreport.component.scss
+++ b/src/app/modules/frontoffice/rulesnpolicyreport/rulesnpolicyreport.component.scss
@@ -8,5 +8,9 @@ mat-form-field{
 .mat-column-Description{
     flex:1 0 350px;
 }
+.pre{
+    font-size: 14px;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
 
