--- a/src/app/modules/DataUploadDownload/datadump/datadump.component.html
+++ b/src/app/modules/DataUploadDownload/datadump/datadump.component.html
@@ -1,35 +1,37 @@
-<mat-card style="margin-top: 15px;">
+<!-- <mat-card style="margin-top: 15px;">
     <mat-card-title style="margin:20px">Data Dump</mat-card-title>
-    <mat-card-content style="margin:20px">
-        <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <form [formGroup]="studentSearchForm" fxLayout="row wrap" fxLayoutAlign="center center">
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Class</mat-label>
-                <mat-select formControlName="searchClassId">
-                    <mat-option value="0">select</mat-option>
-                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
-                        {{item.ClassName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Remarks</mat-label>
-                <mat-select formControlName="searchRemarkId">
-                    <mat-option *ngFor="let item of Remarks" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
-                (click)="GetStudent()">
-                <mat-icon>search</mat-icon>
-                <mat-icon *ngIf="loading">
-                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                </mat-icon>
-            </button>
-        </form>
-        <br>
-        <!-- <div id="printsection">
+    <mat-card-content style="margin:20px"> -->
+<div style="margin:15px;">
+    <div style="font-weight:bolder;margin:15px">Download Student Data</div>
+    <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+    <form [formGroup]="studentSearchForm">
+        <mat-form-field appearance="outline" style="width: 150px;">
+            <mat-label>Class group</mat-label>
+            <mat-select formControlName="searchGroupId">
+                <mat-option value="0">select</mat-option>
+                <mat-option *ngFor="let item of ClassGroups" [value]="item.ClassGroupId">
+                    {{item.GroupName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" style="width: 150px;">
+            <mat-label>Remarks</mat-label>
+            <mat-select formControlName="searchRemarkId">
+                <mat-option *ngFor="let item of Remarks" [value]="item.MasterDataId">
+                    {{item.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button [disabled]="loading" matTooltip="search student" mat-raised-button color="accent"
+            (click)="GetStudent()">
+            <mat-icon>search</mat-icon>
+            <mat-icon *ngIf="loading">
+                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+            </mat-icon>
+        </button>
+    </form>
+    <br>
+    <!-- <div id="printsection">
             <mat-table #table [dataSource]="dataSource" style="overflow: auto;">
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
                     <mat-header-cell *matHeaderCellDef>
@@ -44,12 +46,13 @@
             </mat-table>
         </div> -->
 
-        <!-- <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator> -->
-        <!-- <button (click)="exportArray()" mat-raised-button color="accent">
+    <!-- <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator> -->
+    <!-- <button (click)="exportArray()" mat-raised-button color="accent">
             <mat-icon>excel</mat-icon>
             <mat-icon *ngIf="loading">
                 <mat-spinner diameter="25"></mat-spinner>
             </mat-icon>
         </button> -->
-    </mat-card-content>
-</mat-card>
+    <!-- </mat-card-content>
+</mat-card> -->
+</div>
