--- a/src/app/modules/frontoffice/rulesnpolicyreport/rulesnpolicyreport.component.html
+++ b/src/app/modules/frontoffice/rulesnpolicyreport/rulesnpolicyreport.component.html
@@ -41,7 +41,7 @@
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row">
+        <mat-row *matRowDef="let row; columns: displayedColumns;">
         </mat-row>
     </mat-table>
     <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,100]">
