--- a/src/app/modules/specialfeature/studentactivityboard/studentactivityboard.component.html
+++ b/src/app/modules/specialfeature/studentactivityboard/studentactivityboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title style="margin:20px">Student Additional Info</mat-card-title>
+    <mat-card-title style="margin:20px">Special features</mat-card-title>
     <mat-card-subtitle style="margin:20px"
         style="align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
        
