--- a/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
+++ b/src/app/modules/dashboard/homedashboard/homedashboard.component.scss
@@ -13,5 +13,5 @@ mat-form-field,button{
     height: max-content;
     //margin-top:100px; 
     margin: 60px;
-    width: auto;
+    width: 100vw;
 }
