--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -8,7 +8,7 @@
     position: relative;
     height: 91vh;
     margin: 0px 10px 10px 10px;
-    //width: 100%;
+    width: 100%;
 }
 
 mat-form-field{
