--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -16,7 +16,7 @@
         </div>
     </mat-card-subtitle>
     <mat-card-content style="margin:20px">
-        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex"
+        <mat-tab-group [selectedIndex]="selectedIndex"
             (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
