attendance issue fixed

--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -39,7 +39,7 @@
 </form>
 <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="StudentRollNo">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Student
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Student-Rollno
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             {{element.StudentRollNo}}
