--- a/src/app/modules/frontoffice/no-of-student/no-of-student.component.html
+++ b/src/app/modules/frontoffice/no-of-student/no-of-student.component.html
@@ -33,7 +33,7 @@
         </mat-cell>
         <mat-footer-cell *matFooterCellDef style="justify-content: center;">
             <span *ngIf="BoyGirlTotal[disCol]!=undefined">
-                {{disCol}}: {{BoyGirlTotal[disCol]}}
+                {{BoyGirlTotal[disCol]}}
             </span>            
             <span *ngIf="disCol=='Total'">
                 Grand Total: {{TotalStudent}}
